--- a/src/main/webapp/resources/paymentMethod/slip.xhtml
+++ b/src/main/webapp/resources/paymentMethod/slip.xhtml
@@ -8,7 +8,7 @@
 
     <!-- INTERFACE -->
     <cc:interface>
-        <cc:attribute name="paymentMethodData" />
+        <cc:attribute name="paymentMethodData"  type="com.divudi.data.dataStructure.PaymentMethodData" />
     </cc:interface>
 
     <!-- IMPLEMENTATION -->
