--- a/src/main/webapp/reports/index.xhtml
+++ b/src/main/webapp/reports/index.xhtml
@@ -63,7 +63,7 @@
                                 <p:tab title="Collection Center Reports">
                                     <div class="d-grid gap-2">
                                         <p:commandButton   class="w-100"  ajax="false" value="1. Collection Center Reports Print" ></p:commandButton>
-                                        <p:commandButton   class="w-100"  ajax="false" value="2. Collection Center Balance" ></p:commandButton>
+                                        <p:commandButton   class="w-100"  ajax="false" value="2. Collection Center Balance" action="/reports/collectionCenterReports/collection_center_balance_report" ></p:commandButton>
                                         <p:commandButton   class="w-100"  ajax="false" value="3. Collection Center Receipt" ></p:commandButton>
                                         <p:commandButton   class="w-100"  ajax="false" value="4. Collection Center Bill Wise Detail" ></p:commandButton>
                                         <p:commandButton   class="w-100"  ajax="false" value="5. Collection Center Wise Invoice List" ></p:commandButton>
