Close Issue#1454 Signed-off-by: Senula88 <senulananayakkara88@gmail.com>

--- a/src/main/webapp/reports/index.xhtml
+++ b/src/main/webapp/reports/index.xhtml
@@ -64,7 +64,7 @@
                                     <div class="d-grid gap-2">
                                         <p:commandButton   class="w-100"  ajax="false" value="1. Collection Center Reports Print" ></p:commandButton>
                                         <p:commandButton   class="w-100"  ajax="false" value="2. Collection Center Balance" action="/reports/collectionCenterReports/collection_center_balance_report" ></p:commandButton>
-                                        <p:commandButton   class="w-100"  ajax="false" value="3. Collection Center Receipt" ></p:commandButton>
+                                        <p:commandButton   class="w-100"  ajax="false" value="3. Collection Center Receipt" action="/reports/collectionCenterReports/collection_center_receipt_report"></p:commandButton>
                                         <p:commandButton   class="w-100"  ajax="false" value="4. Collection Center Bill Wise Detail" ></p:commandButton>
                                         <p:commandButton   class="w-100"  ajax="false" value="5. Collection Center Wise Invoice List" ></p:commandButton>
                                         <p:commandButton   class="w-100"  ajax="false" value="6. Collection Center Statement "></p:commandButton>
