Closes Issue#1458 Signed-off-by: Senula88 <senulananayakkara88@gmail.com>

--- a/src/main/webapp/reports/index.xhtml
+++ b/src/main/webapp/reports/index.xhtml
@@ -67,7 +67,7 @@
                                         <p:commandButton   class="w-100"  ajax="false" value="3. Collection Center Receipt" action="/reports/collectionCenterReports/collection_center_receipt_report"></p:commandButton>
                                         <p:commandButton   class="w-100"  ajax="false" value="4. Collection Center Bill Wise Detail" ></p:commandButton>
                                         <p:commandButton   class="w-100"  ajax="false" value="5. Collection Center Wise Invoice List" ></p:commandButton>
-                                        <p:commandButton   class="w-100"  ajax="false" value="6. Collection Center Statement "></p:commandButton>
+                                        <p:commandButton   class="w-100"  ajax="false" value="6. Collection Center Statement" action="/reports/collectionCenterReports/collection_center_statement_report"></p:commandButton>
                                         <p:commandButton   class="w-100"  ajax="false" value="7. Collection Center Wise Summary" ></p:commandButton>
                                         <p:commandButton   class="w-100"  ajax="false" value="8. Collection Center Test Wise  Count" ></p:commandButton>
                                         <p:commandButton   class="w-100"  ajax="false" value="9. Route Analysis" ></p:commandButton>
