--- a/src/main/webapp/reports/index.xhtml
+++ b/src/main/webapp/reports/index.xhtml
@@ -65,7 +65,7 @@
                                         <p:commandButton   class="w-100"  ajax="false" value="1. Collection Center Reports Print" ></p:commandButton>
                                         <p:commandButton   class="w-100"  ajax="false" value="2. Collection Center Balance" action="/reports/collectionCenterReports/collection_center_balance_report" ></p:commandButton>
                                         <p:commandButton   class="w-100"  ajax="false" value="3. Collection Center Receipt" action="/reports/collectionCenterReports/collection_center_receipt_report"></p:commandButton>
-                                        <p:commandButton   class="w-100"  ajax="false" value="4. Collection Center Bill Wise Detail" ></p:commandButton>
+                                        <p:commandButton   class="w-100"  ajax="false" value="4. Collection Center Bill Wise Detail" action="/reports/collectionCenterReports/collection_center_bill_wise_detail_report"></p:commandButton>
                                         <p:commandButton   class="w-100"  ajax="false" value="5. Collection Center Wise Invoice List" ></p:commandButton>
                                         <p:commandButton   class="w-100"  ajax="false" value="6. Collection Center Statement" action="/reports/collectionCenterReports/collection_center_statement_report"></p:commandButton>
                                         <p:commandButton   class="w-100"  ajax="false" value="7. Collection Center Wise Summary" ></p:commandButton>
