Closes Issue#1462 Signed-off-by: Senula88 <senulananayakkara88@gmail.com>

--- a/src/main/webapp/reports/index.xhtml
+++ b/src/main/webapp/reports/index.xhtml
@@ -68,7 +68,7 @@
                                         <p:commandButton   class="w-100"  ajax="false" value="4. Collection Center Bill Wise Detail" action="/reports/collectionCenterReports/collection_center_bill_wise_detail_report"></p:commandButton>
                                         <p:commandButton   class="w-100"  ajax="false" value="5. Collection Center Wise Invoice List" ></p:commandButton>
                                         <p:commandButton   class="w-100"  ajax="false" value="6. Collection Center Statement" action="/reports/collectionCenterReports/collection_center_statement_report"></p:commandButton>
-                                        <p:commandButton   class="w-100"  ajax="false" value="7. Collection Center Wise Summary" ></p:commandButton>
+                                        <p:commandButton   class="w-100"  ajax="false" value="7. Collection Center Wise Summary" action="/reports/collectionCenterReports/collection_center_wise_summary_report"></p:commandButton>
                                         <p:commandButton   class="w-100"  ajax="false" value="8. Collection Center Test Wise  Count" ></p:commandButton>
                                         <p:commandButton   class="w-100"  ajax="false" value="9. Route Analysis" ></p:commandButton>
                                         <p:commandButton   class="w-100"  ajax="false" value="10. Collction Centre Book" ></p:commandButton>
