--- a/src/main/webapp/reports/index.xhtml
+++ b/src/main/webapp/reports/index.xhtml
@@ -69,7 +69,7 @@
                                         <p:commandButton   class="w-100"  ajax="false" value="5. Collection Center Wise Invoice List" ></p:commandButton>
                                         <p:commandButton   class="w-100"  ajax="false" value="6. Collection Center Statement" action="/reports/collectionCenterReports/collection_center_statement_report"></p:commandButton>
                                         <p:commandButton   class="w-100"  ajax="false" value="7. Collection Center Wise Summary" action="/reports/collectionCenterReports/collection_center_wise_summary_report"></p:commandButton>
-                                        <p:commandButton   class="w-100"  ajax="false" value="8. Collection Center Test Wise  Count" ></p:commandButton>
+                                        <p:commandButton   class="w-100"  ajax="false" value="8. Collection Center Test Wise  Count" action="/reports/collectionCenterReports/collection_center_test_wise_count_report"></p:commandButton>
                                         <p:commandButton   class="w-100"  ajax="false" value="9. Route Analysis" ></p:commandButton>
                                         <p:commandButton   class="w-100"  ajax="false" value="10. Collction Centre Book" ></p:commandButton>
                                         <p:commandButton   class="w-100"  ajax="false" value="11. Collction Centre Book Wise Detail" ></p:commandButton>
