Signed-off-by: Dr M H B Ariyaratne <buddhika.ari@gmail.com>

--- a/src/main/webapp/opd/patient_search.xhtml
+++ b/src/main/webapp/opd/patient_search.xhtml
@@ -39,7 +39,7 @@
                                                      value="#{patientController.searchPhone}"
                                                      validatorMessage="Please enter a valid phone number (numbers only)"
                                                      >
-                                            <f:validateRegex pattern="^[0-9]*$"/>
+                                            <!--<f:validateRegex pattern="^[0-9]*$"/>-->
                                         </p:inputText>
 
                                     </div>
