--- a/src/main/webapp/analytics/sms_list.xhtml
+++ b/src/main/webapp/analytics/sms_list.xhtml
@@ -46,24 +46,31 @@
                                      paginatorTemplate="{CurrentPageReport} {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"
                                      rowsPerPageTemplate="5,10,15"
                                      >
-                            <p:column headerText="No" styleClass="alignTop" width="15">
+                            <p:column headerText="Sent At" sortBy="#{sms.createdAt}"  >
                                 <h:outputLabel value="#{sms.createdAt}">
-                                    <f:convertDateTime pattern="#{sessionController.applicationPreference.longDateTimeFormat}"  ></f:convertDateTime>
+                                    <f:convertDateTime pattern="#{sessionController.applicationPreference.shortDateTimeFormat}"  ></f:convertDateTime>
                                 </h:outputLabel>
                             </p:column>
-                            <p:column headerText="SMS Type" styleClass="alignTop" width="15">
+                            <p:column headerText="SMS Type" sortBy="#{sms.smsType}" filterBy="#{sms.smsType}" filterMatchMode="contains" >
                                 <h:outputLabel value="#{sms.smsType}"/>
                             </p:column>
                             <p:column filterBy="#{sms.bill.patient.person.name}" 
                                       filterMatchMode="contains"
-                                      headerText="Patient" styleClass="alignTop" width="15">
+                                      headerText="Patient"  >
                                 <h:outputLabel value="#{sms.bill.patient.person.name}"/>
                             </p:column>
-                            <p:column headerText="Message" styleClass="alignTop" width="15">
+                            <p:column headerText="Message"  >
                                 <h:outputLabel value="#{sms.sendingMessage}"/>
                             </p:column>
-                            <p:column headerText="Success" styleClass="alignTop" width="15">
-                                <h:outputLabel value="#{sms.sentSuccessfully}"/>
+                            <p:column headerText="Phone Number"
+                                      filterBy="#{sms.receipientNumber}" 
+                                      filterMatchMode="contains"
+                                      styleClass="alignTop" >
+                                <h:outputLabel value="#{sms.receipientNumber}"/>
+                            </p:column>
+                            <p:column headerText="Success"  sortBy="#{sms.sentSuccessfully}" >
+                                <h:outputLabel value="#{sms.sentSuccessfully?'Success':'failed'}"
+                                               class="#{sms.sentSuccessfully?'':'text-danger'}"/>
                             </p:column>
                         </p:dataTable>
 
