--- a/src/main/webapp/resources/paymentMethod/creditCard.xhtml
+++ b/src/main/webapp/resources/paymentMethod/creditCard.xhtml
@@ -1,7 +1,7 @@
 <?xml version='1.0' encoding='UTF-8' ?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
-       xmlns:cc="http://java.sun.com/jsf/composite"
+      xmlns:cc="http://java.sun.com/jsf/composite"
       xmlns:h="http://java.sun.com/jsf/html"
       xmlns:p="http://primefaces.org/ui"
       xmlns:f="http://java.sun.com/jsf/core">
@@ -13,15 +13,21 @@
 
     <!-- IMPLEMENTATION -->
     <cc:implementation>
-        <h:panelGrid columns="3">            
-            <p:inputText autocomplete="off"   value="#{cc.attrs.paymentMethodData.creditCard.no}" id="refno"/>                                
-            <p:selectOneMenu value="#{cc.attrs.paymentMethodData.creditCard.institution}" >
-                <f:selectItem itemLabel="Select Bank"/>
-                <f:selectItems value="#{institutionController.banks}" var="inst" itemLabel="#{inst.name}" itemValue="#{inst}"/>
-            </p:selectOneMenu>
-<!--            <p:inputText autocomplete="off"   value="#{cc.attrs.paymentMethodData.creditCard.comment}"  id="memo"/>
-            <p:watermark value="Memo" for="memo" />-->
-            <p:watermark value="Card Ref. No." for="refno" />
-        </h:panelGrid>
+
+        <div class="row" >
+            <div class="col" >
+                <p:inputText autocomplete="off"   value="#{cc.attrs.paymentMethodData.creditCard.no}" id="refno"/>                                
+            </div>
+            <div class="col" >
+                <p:selectOneMenu value="#{cc.attrs.paymentMethodData.creditCard.institution}" >
+                    <f:selectItem itemLabel="Select Bank"/>
+                    <f:selectItems value="#{institutionController.banks}" var="inst" itemLabel="#{inst.name}" itemValue="#{inst}"/>
+                </p:selectOneMenu>
+                <p:watermark value="Card Ref. No." for="refno" />
+            </div>
+            <div class="col" >
+
+            </div>
+        </div>
     </cc:implementation>
 </html>
