--- a/src/main/webapp/resources/paymentMethod/multiple_payment_methods.xhtml
+++ b/src/main/webapp/resources/paymentMethod/multiple_payment_methods.xhtml
@@ -15,51 +15,68 @@
 
     <!-- IMPLEMENTATION -->
     <cc:implementation>
+        <div class="col-12" >
+            <p:dataTable class="w-100"
+                id="tblMultiplePayments"
+                value="#{cc.attrs.paymentMethodData.paymentMethodMultiple.multiplePaymentMethodComponentDetails}" 
+                var="pm" >
+                <p:column headerText="Multiple Payments">
+                    <f:facet name="header" >
+                        <p:outputLabel value="Multiple Payments" class="mx-1" ></p:outputLabel>
+                        <p:commandButton value="Add Another" process="@this" update="tblMultiplePayments" action="#{cc.attrs.paymentMethodData.paymentMethodMultiple.addAnotherPaymentDetail}" ></p:commandButton>
+                    </f:facet>
+                    <div class="row" >
+
+                        <div class="col-3" >
+
+                            <p:selectOneMenu   
+                                id="pay" 
+                                value="#{pm.paymentMethod}"
+                                class="w-100">  
+                                <f:selectItem itemLabel="Select" ></f:selectItem>
+                                <f:selectItems 
+                                    value="#{enumController.paymentMethodsNonCreditExceptMultiple}"  
+                                    var="pm1"
+                                    itemLabel="#{pm1.label}"
+                                    itemValue="#{pm1}"/>
+                                <p:ajax process="pay" 
+                                        update="paymentDetails"
+                                        event="change"/>
+                            </p:selectOneMenu>
+                        </div>
+
+                        <h:panelGroup layout="block" class="col-9"  id="paymentDetails"  >
+
+                            <h:panelGroup id="cash" rendered="#{pm.paymentMethod eq 'Cash'}"  layout="block" class="row" >
+                                <pa:cash valueRequired="true" paymentMethodData="#{pm.paymentMethodData}"/>
+                            </h:panelGroup>
+                            <h:panelGroup id="creditCard" rendered="#{pm.paymentMethod eq 'Card'}" layout="block" class="row" >
+                                <pa:creditCard valueRequired="true" paymentMethodData="#{pm.paymentMethodData}"/>
+                            </h:panelGroup>
+                            <h:panelGroup id="eWallet"  rendered="#{pm.paymentMethod eq 'ewallet'}"  layout="block" class="row" >
+                                <pa:ewallet valueRequired="true" paymentMethodData="#{pm.paymentMethodData}"/>
+                            </h:panelGroup>
+                            <h:panelGroup id="cheque"  rendered="#{pm.paymentMethod eq 'Cheque'}"  layout="block" class="row" >
+                                <pa:cheque valueRequired="true" paymentMethodData="#{pm.paymentMethodData}"/>
+                            </h:panelGroup>
+                            <h:panelGroup id="slip"  rendered="#{pm.paymentMethod eq 'Slip'}"  layout="block" class="row" >
+                                <pa:slip valueRequired="true" paymentMethodData="#{pm.paymentMethodData}"/>
+                            </h:panelGroup>
+                            <h:panelGroup id="patientDeposit"  rendered="#{pm.paymentMethod eq 'PatientDeposit'}"  layout="block" class="row" >
+                                <pa:patient_deposit valueRequired="true" paymentMethodData="#{pm.paymentMethodData}"/>
+                            </h:panelGroup>
 
 
-        <ui:repeat rendered="false" value="#{cc.attrs.paymentMethodData.paymentMethodMultiple.multiplePaymentMethodComponentDetails}" var="pm" >
-            1.    <h1>#{pm}</h1>
-        </ui:repeat>
-
-        <p:dataTable value="#{cc.attrs.paymentMethodData.paymentMethodMultiple.multiplePaymentMethodComponentDetails}" var="pm" >
-            <p:column >
-                <p:selectOneMenu   
-                    id="pay" 
-                    value="#{pm.paymentMethod}"
-                    class="w-100">  
-                    <f:selectItem itemLabel="Select" ></f:selectItem>
-                    <f:selectItems 
-                        value="#{enumController.getPaymentMethodsNonCreditExceptMultiple}"  
-                        var="pm1"
-                        itemLabel="#{pm1.label}"
-                        itemValue="#{pm1}"/>
-                    <p:ajax process="pay" 
-                            update="paymentDetails"
-                            event="change"/>
-                </p:selectOneMenu>
-            </p:column>
-            <p:column >
-                <h:panelGroup layout="block" id="paymentDetails" class="col-12" >
-                    <h:panelGroup id="creditCard" rendered="#{pm.paymentMethod eq 'Card'}" >
-                        <pa:creditCard paymentMethodData="#{pm.paymentMethodData}"/>
-                    </h:panelGroup>
-                    <h:panelGroup id="eWallet"  rendered="#{pm.paymentMethod eq 'ewallet'}" >
-                        <pa:ewallet paymentMethodData="#{pm.paymentMethodData}"/>
-                    </h:panelGroup>
-                    <h:panelGroup id="cheque"  rendered="#{pm.paymentMethod eq 'Cheque'}" >
-                        <pa:cheque paymentMethodData="#{pm.paymentMethodData}"/>
-                    </h:panelGroup>
-                    <h:panelGroup id="slip"  rendered="#{pm.paymentMethod eq 'Slip'}" >
-                        <pa:slip paymentMethodData="#{pm.paymentMethodData}"/>
-                    </h:panelGroup>
-                    <h:panelGroup id="patientDeposit"  rendered="#{pm.paymentMethod eq 'PatientDeposit'}" >
-                        <pa:patient_deposit paymentMethodData="#{pm.paymentMethodData}"/>
-                    </h:panelGroup>
-                </h:panelGroup>
+                        </h:panelGroup>
 
 
-            </p:column>
-        </p:dataTable>
+
+                    </div>
+
+                </p:column>
+            </p:dataTable>
+        </div>
+
 
 
     </cc:implementation>
