--- a/src/main/webapp/resources/paymentMethod/patient_deposit.xhtml
+++ b/src/main/webapp/resources/paymentMethod/patient_deposit.xhtml
@@ -9,6 +9,7 @@
     <!-- INTERFACE -->
     <cc:interface>
         <cc:attribute name="paymentMethodData"  type="com.divudi.data.dataStructure.PaymentMethodData" />
+        <cc:attribute name="valueRequired" type="boolean" />
     </cc:interface>
 
     <!-- IMPLEMENTATION -->
