--- a/src/main/webapp/opd/analytics/batch_bill_list.xhtml
+++ b/src/main/webapp/opd/analytics/batch_bill_list.xhtml
@@ -148,10 +148,10 @@
                                              >
                                     <p:column headerText="No" filterBy="#{bill.id}" filterMatchMode="contains"
                                               sortBy="#{bill.id}"
-                                              styleClass="alignTop" width="15">
+                                              styleClass="alignTop" >
                                         <h:outputLabel value="#{bill.id}"/>
                                     </p:column>
-                                    <p:column headerText="Bill No" sortBy="#{bill.insId}" filterBy="#{bill.insId}" >                                
+                                    <p:column headerText="Institution Bill No" sortBy="#{bill.insId}" filterBy="#{bill.insId}" >                                
                                         <p:commandLink id="billNo" 
                                                        ajax="false" 
                                                        value="#{bill.insId}" 
@@ -159,23 +159,24 @@
                                             <f:setPropertyActionListener value="#{bill}" target="#{opdSearchController.billLight}"/>
                                         </p:commandLink>
                                     </p:column>
-                                    <p:column headerText="Bill No" sortBy="#{bill.deptId}" filterBy="#{bill.deptId}">
+                                    <p:column headerText="Department Bill No" sortBy="#{bill.deptId}" filterBy="#{bill.deptId}">
                                         <h:commandLink action="/bill_reprint" value="#{bill.deptId}">
                                             <f:setPropertyActionListener value="#{bill}" target="#{billSearch.bill}"/>
                                         </h:commandLink>  
                                     </p:column>
-                                    <p:column headerText="Billed At"  sortBy="#{bill.billDate}"  >
+                                    <p:column headerText="Billed Time"  sortBy="#{bill.billDate}"  >
                                         <p:outputLabel id="billTime" value="#{bill.billDate}" >
                                             <f:convertDateTime  timeZone="Asia/Colombo" pattern="#{sessionController.applicationPreference.shortTimeFormat}" ></f:convertDateTime>
                                         </p:outputLabel>
                                     </p:column>
-                                    <p:column headerText="Billed For" sortBy="#{bill.toDepartment.name}" 
-                                              filterBy="#{bill.toDepartment.name}" filterMatchMode="contains" >                                
-                                        <h:outputLabel id="insDep" value="#{bill.toDepartment.name}" />
+                                    <p:column headerText="Institution" sortBy="#{bill.institution.name}" 
+                                              filterBy="#{bill.institution.name}" filterMatchMode="contains" >                                
+                                        <h:outputLabel id="ins" value="#{bill.institution.name}" />
                                     </p:column>
-<!--                                    <p:column headerText="Billed At"  sortBy="#{bill.departmentName}" filterBy="#{bill.departmentName}"  >                                
-                                        <h:outputLabel value="#{bill.departmentName}" />
-                                    </p:column>-->
+                                    <p:column headerText="Department" sortBy="#{bill.department.name}" 
+                                              filterBy="#{bill.department.name}" filterMatchMode="contains" >                                
+                                        <h:outputLabel id="dep" value="#{bill.department.name}" />
+                                    </p:column>
                                     <p:column headerText="Billed by"  sortBy="#{bill.creater.name}" filterBy="#{bill.creater.name}" >
                                         <h:outputLabel value="#{bill.creater.name}" >                                      
                                         </h:outputLabel>
