Closes #1484 Signed-off-by: Dr M H B Ariyaratne <buddhika.ari@gmail.com>

--- a/src/main/webapp/opd/patient.xhtml
+++ b/src/main/webapp/opd/patient.xhtml
@@ -111,6 +111,12 @@
                                                  class="w-100"
                                                  action="#{patientController.navigateToOpdBillFromOpdPatient()}" ajax="false" styleClass="mx-2">
                                 </p:commandButton>
+                                <p:commandButton value="OPD Packages" 
+                                                 action="#{patientController.navigateToOpdPackageBillFromOpdPatient()}" 
+                                                 ajax="false"
+                                                 class="w-100"
+                                                 styleClass="mx-2">
+                                </p:commandButton>
                                 <p:commandButton value="Accept Payments" action="#{patientController.toEmrPatientProfile()}" ajax="false" styleClass="mx-2">
                                 </p:commandButton>
                                 <p:commandButton value="Refunds" action="#{patientController.toEmrPatientProfile()}" ajax="false" styleClass="mx-2">
